# rust-web-extension-talk

./: .gitignore  Cargo.toml  IDEAS.md  Makefile  README.md  build.rs  package.json
artifacts/: manifest.json  package.json
scripts/github_logo_replacement/: Cargo.toml
scripts/github_logo_replacement/src/: lib.rs
scripts/github_vital_infos/: Cargo.toml
scripts/hello_linz/: Cargo.toml
scripts/hello_linz/src/: lib.rs
scripts/set_real_install_date/: Cargo.toml
scripts/set_real_install_date/src/: lib.rs
scripts/show_install_date_on_github/: Cargo.toml
scripts/show_install_date_on_github/src/: install_time.rs  install_time_notification.rs  lib.rs
shared/: Cargo.toml
shared/src/: install_time.rs  lib.rs
src/: lib.rs
