[package]
name = "shared"
version = "0.1.0"
authors = ["Karl Grasegger <51945878+grasegger@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.45"

[dependencies.wasm-bindgen]
version = "0.2.68"
features = ["serde-serialize"] 