[package]
name = "show_install_date_on_github"
version = "0.1.0"
authors = ["Karl Grasegger <51945878+grasegger@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen-futures = "0.4"
js-sys = "0.3.45"
console_error_panic_hook = "0.1.6"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../../shared" }

[dependencies.wasm-bindgen]
version = "0.2.68"
features = ["serde-serialize"] 

[dependencies.web-sys]
version = "0.3"
features = ["console"]
